--- a/DvachBrowser3/DvachBrowser3.csproj
+++ b/DvachBrowser3/DvachBrowser3.csproj
@@ -100,6 +100,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\CleanListContentMarginBehavior.cs" />
     <Compile Include="Behaviors\TextBoxChangeDelayBehavior.cs" />
     <Compile Include="Configuration\Implementation\AppDataNetworkProfile.cs" />
     <Compile Include="Configuration\Implementation\BuiltIn\Bad3GNetworkProfile.cs" />
