Общая синхронизация кода

--- a/DvachBrowser3/DvachBrowser3.csproj
+++ b/DvachBrowser3/DvachBrowser3.csproj
@@ -298,6 +298,7 @@
     <Compile Include="Views\Partial\Additional\ContentPopupManager.cs" />
     <Compile Include="Views\Partial\Additional\ShowFullPostEventArgs.cs" />
     <Compile Include="Views\Partial\Additional\ShowFullPostEventHandler.cs" />
+    <Compile Include="Views\Partial\Additional\TextRenderCommandKeyHelper.cs" />
     <Compile Include="Views\Partial\BannerView.xaml.cs">
       <DependentUpon>BannerView.xaml</DependentUpon>
     </Compile>
