--- a/DvachBrowser3.TextRenderD2D/project.json
+++ b/DvachBrowser3.TextRenderD2D/project.json
@@ -1,13 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.ApplicationInsights": "1.2.3",
-    "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
-    "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Newtonsoft.Json": "8.0.2",
-    "Template10": "1.0.8",
-    "Win2D.uwp": "1.13.0",
-    "XamlAnimatedGif": "1.0.7"
+    "Win2D.uwp": "1.13.0"
   },
   "frameworks": {
     "uap10.0": {}
