--- a/DvachBrowser3/DvachBrowser3.csproj
+++ b/DvachBrowser3/DvachBrowser3.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Core\AsyncOperationDispatcher.cs" />
     <Compile Include="Core\BoolToVisibilityConverter.cs" />
     <Compile Include="Core\CollectionHelper.cs" />
+    <Compile Include="Core\EventDelayHelper.cs" />
     <Compile Include="Core\InterlockedFlagContainer.cs" />
     <Compile Include="Core\IWeakEventCallback.cs" />
     <Compile Include="Core\IWeakEventChannel.cs" />
@@ -243,12 +244,14 @@
     <Compile Include="ViewModels\Operations\StdEngineOperationWrapper.cs" />
     <Compile Include="ViewModels\PageLifetimeHelper.cs" />
     <Compile Include="ViewModels\Banners\IPageBannerViewModel.cs" />
+    <Compile Include="ViewModels\Posting\Implementation\PostingFieldsViewModel.cs" />
     <Compile Include="ViewModels\Posting\Implementation\PostingFieldViewModel.cs" />
     <Compile Include="ViewModels\Posting\Implementation\PostingFieldViewModelBase.cs" />
     <Compile Include="ViewModels\Posting\Implementation\PostingIconElement.cs" />
     <Compile Include="ViewModels\Posting\Implementation\PostingIconViewModel.cs" />
     <Compile Include="ViewModels\Posting\Implementation\PostingMediaCollectionViewModel.cs" />
     <Compile Include="ViewModels\Posting\Implementation\PostingMediaViewModel.cs" />
+    <Compile Include="ViewModels\Posting\IPostingFieldDataProvider.cs" />
     <Compile Include="ViewModels\Posting\IPostingFieldsViewModel.cs" />
     <Compile Include="ViewModels\Posting\IPostingFieldViewModel.cs" />
     <Compile Include="ViewModels\Posting\IPostingIconElement.cs" />
