--- a/DvachBrowser3.Engines.Makaba/DvachBrowser3.Engines.Makaba.csproj
+++ b/DvachBrowser3.Engines.Makaba/DvachBrowser3.Engines.Makaba.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Engines\Makaba\Operations\MakabaCheckNoCaptchaAbilityOperation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaGetBoardPageOperation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaGetBoardsOperation.cs" />
+    <Compile Include="Engines\Makaba\Operations\MakabaGetCaptchaArgument.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaGetCaptchaOperation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaGetCatalogOperation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaGetMediaFileOperation.cs" />
