--- a/DvachBrowser3.Engines.Makaba/DvachBrowser3.Engines.Makaba.csproj
+++ b/DvachBrowser3.Engines.Makaba/DvachBrowser3.Engines.Makaba.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Engines\Makaba\Operations\MakabaLastModifiedOperation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaPostOperation.cs" />
     <Compile Include="Engines\Makaba\Operations\MakabaThreadStatusOperation.cs" />
+    <Compile Include="Markup\Makaba\MakabaMarkupProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MakabaEngineServicesInitializer.cs" />
   </ItemGroup>
@@ -104,6 +105,7 @@
       <Name>DvachBrowser3.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
